Yt
source_file.java:1: error: class, interface, or enum expected
WEBVTT
^
source_file.java:9: error: illegal character: '\u061f'
<b>تريدين الموت؟ -
               ^
source_file.java:18: error: illegal character: '\u061f'
<b>ماذا سنفعل بهاتين؟</b>
                    ^
3 errors
